# CLI_Anthropic

./: README.md
avenue-compliance-platform/: .gitignore  README.md  package.json  tsconfig.base.json
avenue-compliance-platform/.github/workflows/: ci.yml
avenue-compliance-platform/apps/api-gateway/: package.json
avenue-compliance-platform/apps/web-compliance-console/: package.json  tsconfig.json
avenue-compliance-platform/apps/web-examiner-portal/: package.json  tsconfig.json
avenue-compliance-platform/data/retention-policies/: comms.yaml
avenue-compliance-platform/data/rulebook-corpus/: README.md
avenue-compliance-platform/data/surveillance-scenarios/: wash-trading.yaml
avenue-compliance-platform/data/wsps/: README.md
avenue-compliance-platform/docs/architecture/: overview.md
avenue-compliance-platform/docs/regulatory-mapping/: controls-matrix.yaml
avenue-compliance-platform/docs/runbooks/: 8210-response.md  examiner-onboarding.md  legal-hold.md  sar-filing.md
avenue-compliance-platform/services/evidence-packager/: pyproject.toml
avenue-compliance-platform/services/evidence-packager/src/: __init__.py  packager.py
avenue-compliance-platform/services/evidence-packager/tests/: test_packager.py
avenue-compliance-platform/services/regulatory-rag-service/: pyproject.toml
avenue-compliance-platform/services/regulatory-rag-service/src/: __init__.py  citation_guard.py  main.py  rag.py
avenue-compliance-platform/services/regulatory-rag-service/tests/: test_citation_guard.py
avenue-compliance-platform/services/surveillance-engine/: pyproject.toml
avenue-compliance-platform/services/surveillance-engine/engine/: __init__.py  runner.py
avenue-compliance-platform/services/surveillance-engine/scenarios/: __init__.py  base.py  wash_trading.py
avenue-compliance-platform/services/surveillance-engine/tests/: test_wash_trading.py
(+45 files in other folders)
