[project]
name = "regulatory-rag-service"
version = "0.1.0"
description = "Claude-powered RAG over FINRA/SEC rulebook with citation guardrails (P6)."
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "opensearch-py>=2.6",
  "avenue-audit-sdk",
]

[tool.uv.sources]
avenue-audit-sdk = { path = "../../packages/audit-sdk-py" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
